# ai-exponentials

./: CTOR.ipynb  README.md  pyproject.toml
