[tool.poetry]
name = "ai-exponentials"
version = "0.1.0"
description = "Plotting the exponential improvements in AI research"
authors = ["Lars Vagnes <larsvagnes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8,<3.12"
matplotlib = "^3.6.0"
numpy = "^1.21.2"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
